--- a/02-JS-and-CSS-Clock/index-START.html
+++ b/02-JS-and-CSS-Clock/index-START.html
@@ -62,13 +62,23 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      
     }
+    .hour-hand {
+      width: 30%;
+      transform: rotate(90deg);
+      left: 20%;
+    }
+    .min-hand {
+      width: 40%;
+      transform: rotate(90deg);
+      left: 10%;
+    } 
 
   </style>
 
-  <script>
-
-
-  </script>
+  <script src="clock-js.js"></script>
 </body>
 </html>
