finish work with 3rd task and create index.html

--- a/03-CSS-Variables/index-START.html
+++ b/03-CSS-Variables/index-START.html
@@ -18,13 +18,24 @@
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="photo-1465188162913-8fb5709d6d57.jpg">
 
   <style>
 
-    /*
-      misc styles, nothing to do with CSS variables
-    */
+    :root {
+      --spacing: 10px;
+      --blur: 10px;
+      --base: #ffc600;
+    }
+    .hl {
+      color: var(--base);
+    }
+
+    img {
+      margin: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
 
     body {
       text-align: center;
@@ -44,8 +55,7 @@
     }
   </style>
 
-  <script>
-  </script>
+  <script src="change-css-variables.js"></script>
 
 </body>
 </html>
